--- a/test.html
+++ b/test.html
@@ -1,2 +1,16 @@
-
-<html><head><meta property="og:title" content="Cara Subijano Wong's #ThankList" /><meta property="og:site_name" content="ThankList"/><meta property="og:url" content="http://www.thanklist.com/share/chgcuswmd3" /><meta property="og:description" content="We've all heard of a bucket list, but what about a ThankList? Who's on yours?" /><meta property="og:image" content="http://s3.amazonaws.com/agt-production/ugi_38582015-04-1503-21-33.334123.jpg" /><meta property="fb:app_id" content="833183266741056" /><meta property="og:type" content="thanklist:thankyouvideo" /><meta property="og:locale" content="en_US" /> </head><script>function newDoc() {window.location.assign('http://www.thanklist.com/v/chgcuswmd3')}</script><body onload='newDoc()'></body></html>
+<html>
+    <head>
+        <meta property="og:title" content="Purina Pro Product Name" />
+        <meta property="og:site_name" content="Amazon"/>
+        <meta property="og:url" content="http://www.thanklist.com/share/chgcuswmd3" />
+        <meta property="og:description" content="This is a description for purina pro product" />
+        <meta property="og:image" content="//res.cloudinary.com/monsterpetsupplies/image/upload/c_pad,w_500,h_500/v1440423242/7613035114920_PURINA__PRO_PLAN__Dog_Small___Mini_Adult_with_OPTI_opc9mb.jpg" />
+        <meta property="og:locale" content="en_US" /> 
+    </head>
+    <script>function newDoc() {
+        window.location.assign('https://s3-eu-west-1.amazonaws.com/restack-s3brandecommercestaging-bgrw5il4muok/ads/landingPage/preview.html?id=6&brandUrl=http%3A%2F%2Fwww.purina.co.uk')
+    }</script>
+    <body onload='newDoc()'>
+    
+    </body>
+</html>
