--- a/test.html
+++ b/test.html
@@ -6,11 +6,14 @@
         <meta property="og:description" content="This is a description for purina pro product" />
         <meta property="og:image" content="//res.cloudinary.com/monsterpetsupplies/image/upload/c_pad,w_500,h_500/v1440423242/7613035114920_PURINA__PRO_PLAN__Dog_Small___Mini_Adult_with_OPTI_opc9mb.jpg" />
         <meta property="og:locale" content="en_US" /> 
+        <meta property="og:price:amount" content="98.00" />
+        <meta property="og:price:currency" content="GBP" />
+        <meta property="og:availability" content="instock" />
     </head>
     <script>function newDoc() {
-        window.location.assign('https://s3-eu-west-1.amazonaws.com/restack-s3brandecommercestaging-bgrw5il4muok/ads/landingPage/preview.html?id=6&brandUrl=http%3A%2F%2Fwww.purina.co.uk')
-    }</script>
+            window.location.assign('https://s3-eu-west-1.amazonaws.com/restack-s3brandecommercestaging-bgrw5il4muok/ads/landingPage/preview.html?id=6&brandUrl=http%3A%2F%2Fwww.purina.co.uk')
+        }</script>
     <body onload='newDoc()'>
-    
+
     </body>
 </html>
