--- a/dyn.html
+++ b/dyn.html
@@ -4,13 +4,14 @@
         <meta property="og:site_name" content="Monster"/>
         <meta property="og:url" content="http://www.thanklist.com/share/chgcuswmd3" />
         <meta property="og:description" content="This is a description for purina pro product" />
-        <meta property="og:image" content="//res.cloudinary.com/monsterpetsupplies/image/upload/c_pad,w_500,h_500/v1440423242/7613035114920_PURINA__PRO_PLAN__Dog_Small___Mini_Adult_with_OPTI_opc9mb.jpg" />
+        <meta property="og:image" content="https://digital-commerce-api-cdn.fusepump.com/api/v1/offers/27149/images/price/?color=%23cd8b73&size=200&width=1000" />
         <meta property="og:locale" content="en_US" /> 
-        <meta property="og:price:amount" content="12.69" />
+        <meta property="og:price:amount" content="18.99" />
         <meta property="og:price:currency" content="GBP" />
         <meta property="og:availability" content="instock" />
     </head>
-    <script>function newDoc() {
+    <script>
+    function newDoc() {
             window.location.assign('https://s3-eu-west-1.amazonaws.com/restack-s3brandecommercestaging-bgrw5il4muok/ads/landingPage/preview.html?id=6&brandUrl=http%3A%2F%2Fwww.purina.co.uk')
         }</script>
     <body onload='newDoc()'>
