--- a/dyn.html
+++ b/dyn.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta property="og:title" content="Purina Pro Product Name" />
-        <meta property="og:site_name" content="Monster"/>
+        <meta property="og:site_name" content="Monster Changed"/>
         <meta property="og:url" content="http://www.thanklist.com/share/chgcuswmd3" />
         <meta property="og:description" content="This is a description for purina pro product" />
         <meta property="og:image" content="https://digital-commerce-api-cdn.fusepump.com/api/v1/offers/27149/images/price/?color=%23cd8b73&size=300&width=1000" />
