--- a/test1.html
+++ b/test1.html
@@ -5,7 +5,7 @@
         <meta property="og:description" content="Your dog deserves a food that will give him the energy and nutrition he needs to live life to the full." />
         <meta property="og:site_name" content="Pet Planet" />
         <meta property="og:url" content="amazon.com" />
-        <meta property="og:image" content="https://digital-commerce-api-cdn.fusepump.com/api/v1/offers/27149/images/price/?color=%23ff8b73&size=300&width=1000&nocache=1" />
+        <meta property="og:image" content="https://brand-ecommerce-staging-api.fusepump.com/api/v1/offers/6522/images/price/?color=%23968b73&size=300&width=1008&no-cache&nocache=1" />
         <meta property="og:price:amount" content="32.99" />
         <meta property="og:price:currency" content="GBP" />
         <meta property="og:availability" content="instock" />
