--- a/test0.html
+++ b/test0.html
@@ -4,7 +4,7 @@
         <meta property="og:site_name" content="Monster Changed"/>
         <meta property="og:url" content="http://www.thanklist.com/share/chgcuswmd3" />
         <meta property="og:description" content="This is a description for purina pro product" />
-        <meta property="og:image" content="https://brand-ecommerce-dev3.fusepump.com/api/v1/offers/27149/images/price/?color=%ffff00&size=300&width=1000&no=212" />
+        <meta property="og:image" content="https://brand-ecommerce-dev3.fusepump.com/api/v1/offers/27149/images/price/?color=%23ff0000&size=300&width=1000&no=212" />
         <meta property="og:locale" content="en_US" /> 
         <meta property="og:price:amount" content="18.99" />
         <meta property="og:price:currency" content="GBP" />
