--- a/test0.html
+++ b/test0.html
@@ -1,18 +1,17 @@
 <html>
     <head>
-        <meta property="og:title" content="Purina Pro Product Name" />
-        <meta property="og:site_name" content="Monster Changed"/>
-        <meta property="og:url" content="http://www.thanklist.com/share/chgcuswmd3" />
-        <meta property="og:description" content="This is a description for purina pro product" />
-        <meta property="og:image" content="https://brand-ecommerce-dev3.fusepump.com/api/v1/offers/27149/images/price/?color=%23ff0000&size=300&width=1000&no=212" />
-        <meta property="og:locale" content="en_US" /> 
-        <meta property="og:price:amount" content="18.99" />
+        <meta property="og:title" content="Pro Plan All Size Adult Performance Dog Food -14kg" />
+        <meta property="og:description" content="" />
+        <meta property="og:site_name" content="Pet Planet" />
+        <meta property="og:url" content="https://click-dev.pump.to/bn-bec/VVHLTsMwEPyVVbhCk9BKQG%7EhIVQJtVYBceHiJNtmVceO7HWhIP6deIuE6tPu7Gtm%7EJ3hHi2%7EHAbM5pCFTnvMziFj50wCBrKMHgNTr7cY6kimRZ866ibVzwp5CZB8JiWbQhU9WQ3KO1BG21QYjoXX9WJZvcei0AhqvQL1VC3%7E0nu3hcoYCPSFAao2GgaFfuN8r22D8EHcwUq9LNTq7WENnpoOyMJdR80OLbT-ABvnWmGRbl1NUyhSSiEpDJajIJMu4k0Co5eGjnkI8zzfE2tDh4tNDDjEfphsx6OxnpDLeRzMxaTppOPeiKjnXUzjRXk9LUcvjif9USqyiEeWTqExdqUkuOgbPPFYCBoa%7E-Ofr7j6eCsqJEZxUrbPykvBa%7Ed5sqfMfn4B?test=true" />
+        <meta property="og:image" content="https://brand-ecommerce-dev3.fusepump.com/api/v1/imagebuilder/1/image/" />
+        <meta property="og:price:amount" content="33.99" />
         <meta property="og:price:currency" content="GBP" />
         <meta property="og:availability" content="instock" />
     </head>
     <script>
     function newDoc() {
-            window.location.assign('https://s3-eu-west-1.amazonaws.com/restack-s3brandecommercestaging-bgrw5il4muok/ads/landingPage/preview.html?id=6&brandUrl=http%3A%2F%2Fwww.purina.co.uk')
+            window.location.assign("https://click-dev.pump.to/bn-bec/vVLbSsNAEP2VJYJPkm6T1jaCSLwgBWlDrfgiSC7TZul2d9nsNlbx381MvNAfME%7EnnEzmnJnJR2Aetz64YAEfTuMh53wSB2csyFEq%7EAGx01oiNUI5sNA4scs30BReyAosVmh8PY2nEZI9kiiKxkisQpaBY5nMFTjUDErohqSUApQjhWiJ8P4asSz025EvVRgrSkA5jsMkQQX2XYfVwZDa9Su3qBbU6YTTQ7mOBv0JaPqAT8vZPH3xnOfAsuWCZQ%7Ep%7EJve6g1LpWSNeIeGpZWX3TBg19ruclUCa4Wr2SJbzbLF892SdfFqJhS7qbsgoFhlD2ytdUWZ0Ktf8P4%7EfeXffsl23i1Tog3QAr2lgto5czEYtG0bGnCG7hWWOvTbgbG68qUL88ZcVWDcq6guz5Pk1KwRjUcRn1B3bDNC1Ghv-zP9Xo8W0E%7EtrVA5y6ymv4IS0qdAmGpGwyj4%7EAI_?test=true")
         }</script>
     <body onload='newDoc()'>
 
