--- a/test0.html
+++ b/test0.html
@@ -1,11 +1,12 @@
 <html>
     <head>
         <meta property="og:title" content="Purina Pro Product Name" />
-        <meta property="og:site_name" content="Monster Changed"/>
         <meta property="og:url" content="http://www.thanklist.com/share/chgcuswmd3" />
         <meta property="og:description" content="This is a description for purina pro product" />
         <meta property="og:image" content="https://digital-commerce-api-cdn.fusepump.com/api/v1/offers/27159/images/price/?color=%23ff8b73&size=200&width=1000&no=212" />
         <meta property="og:locale" content="en_US" /> 
+        <meta property="og:price:amount" content="18.99" />
+        <meta property="og:price:currency" content="GBP" />
         <meta property="og:availability" content="instock" />
     </head>
     <script>
