--- a/test1.html
+++ b/test1.html
@@ -4,8 +4,8 @@
         <meta property="og:title" content="Pro Plan Duo Delice Adult Dog 10kg" />
         <meta property="og:description" content="Your dog deserves a food that will give him the energy and nutrition he needs to live life to the full." />
         <meta property="og:site_name" content="Pet Planet" />
-        <meta property="og:url" content="amazon.com" />
-        <meta property="og:image" content="https://brand-ecommerce-staging-api.fusepump.com/api/v1/offers/6522/images/price/?color=%23968b73&size=300&width=1008&no-cache&nocache=1" />
+        <meta property="og:url" content="https://www.amazon.com" />
+        <meta property="og:image" content="https://brand-ecommerce-staging-api.fusepump.com/api/v1/imagebuilder/2/image/" />
         <meta property="og:price:amount" content="32.99" />
         <meta property="og:price:currency" content="GBP" />
         <meta property="og:availability" content="instock" />
